# calculator-calculatorfeu

./: .gitignore  CMakeLists.txt  README.md  gamerules.md  main.cpp
.github/workflows/: cmake.yml
buildLinux/: CMakeCache.txt  CTestTestfile.cmake  FireCalculatorCMakeConfig.cmake  FireCalculatorCMakeConfig.h  Makefile  calculator  calculatorlib_target.cmake  cmake_install.cmake
buildLinux/Testing/Temporary/: CTestCostData.txt
buildLinux/src/: Makefile  cmake_install.cmake
buildLinux/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_Process  test_Tree
cmake/: FireCalculatorCMakeConfig.cmake.in  FireCalculatorCMakeConfig.h.in
main/: Calculator.cpp  main.cpp
src/: .Process.cpp.swp  CMakeLists.txt  Input.cpp  Process.cpp  Tree.cpp
src/include/: Input.h  Process.h  Tree.h
test/: .test_Process.cpp.swp  CMakeLists.txt  test_Process.cpp  test_Tree.cpp  test_add_zero_after_point.cpp  test_add_zero_before_point.cpp  test_end_with_operator.cpp  test_is_input_empty.cpp  test_process.cpp  test_remove_following_underscore.cpp  test_remove_non_operator_minus.cpp  test_remove_space.cpp  test_remove_two_minus_beginning.cpp  test_replace_comma.cpp  test_start_with_operator.cpp  test_transform_divide.cpp  test_transform_minus.cpp  test_two_dots_before_operator.cpp  test_two_successive_operator.cpp  test_validity_characters.cpp
